--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.2.1
+  http: ^1.2.2
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_lints: ^4.0.0
