--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_fonts: ^6.2.1
   http: ^1.2.2
   provider: ^6.1.2
+  socket_io_client: ^2.0.3+1
 
 dev_dependencies:
   flutter_lints: ^4.0.0
