--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.2.1
   http: ^1.2.2
+  intl: ^0.19.0
   provider: ^6.1.2
   shared_preferences: ^2.3.2
   socket_io_client: ^2.0.3+1
