--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.1.0
   google_fonts: ^6.2.1
   http: ^1.2.2
   intl: ^0.19.0
